syntax = "proto3";

option csharp_namespace = "Server";

package greet;

service Greeter {

  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc StreamingFromServer(HelloRequest) returns (stream HelloReply);
  rpc StreamingFromClient(stream HelloRequest) returns ( HelloReply);
  rpc StreamingBothWays(stream HelloRequest) returns (stream HelloReply);

}
message HelloRequest {
  string name = 1;
}


message HelloReply {
  string message = 1;
}


service Snake
{
    rpc Join (stream PlayerMessage) returns (stream PlayerMessage);
}


message PlayerMessage
{
    string name = 1;
    string message = 2;
    string status = 3;
}

message ServerMessage
{
    string message = 1;
    string status = 2;
}
